--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="img/Runa-Logo.png">
     <title>Runecard Sorcerers</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <main>
-
+    <main id="index">
+        <h1>♦Runecard Sorcerers♦</h1>
+        <nav>
+            <div id="dir">
+                <div>Jogar</div>
+                <div>Deck</div>
+            </div>
+            <div id="esq">
+                <div>Shop</div>
+                <div>Sobre Nós</div>
+            </div>
+        </nav>
     </main>
-    <footer>
-
-    </footer>
     <script></script>
 </body>
+
 </html>
