--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <h1>♦Runecard Sorcerers♦</h1>
         <nav>
             <div id="dir">
-                <div>Jogar</div>
-                <div>Deck</div>
+                <div> <a href="jogar.html"> Jogar</a></div>
+                <div> <a href="deck.html"> Deck</a></div>
             </div>
             <div id="esq">
-                <div>Shop</div>
-                <div>Sobre Nós</div>
+                <div> <a href="shop.html"> Shop</a></div>
+                <div> <a href="sobre-nos.html"> Sobre nós</a></div>
             </div>
         </nav>
     </main>
