--- a/deck.html
+++ b/deck.html
@@ -15,7 +15,12 @@
 <body>
     <main id="index">
         <h1>♦Runecard Sorcerers♦</h1>
-        
+        <nav>
+            <div>
+                <a href="index.html"> ↩</a>
+            </div>
+
+        </nav>
     </main>
     <script></script>
 </body>
