--- a/index.html
+++ b/index.html
@@ -15,18 +15,13 @@
 <body>
     <main id="index">
         <h1>♦Runecard Sorcerers♦</h1>
-        <nav>
-            <div id="dir">
-                <div> <a href="jogar.html"> Jogar</a></div>
-                <div> <a href="deck.html"> Deck</a></div>
-            </div>
-            <div id="esq">
-                <div> <a href="shop.html"> Shop</a></div>
-                <div> <a href="sobre-nos.html"> Sobre nós</a></div>
-            </div>
+        <nav id="menu">
+            <a href="jogar.html" id="jogar"><div>Jogar</div></a> 
+            <a href="deck.html" id="deck"><div>Deck</div></a>
+            <a href="shop.html" id="shop"><div>Shop</div></a>
+            <a href="sobre-nos.html" id="sobre"><div> Sobre⠀Nós</div></a>
         </nav>
     </main>
     <script></script>
 </body>
-
 </html>
