--- a/deck.html
+++ b/deck.html
@@ -17,7 +17,7 @@
         <h1>♦Runecard Sorcerers♦</h1>
         <nav>
             <div>
-                <a href="index.html"> ↩</a>
+                <a class="volta" href="index.html"> ↩</a>
             </div>
 
         </nav>
