--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -16,10 +16,7 @@
     <main id="index">
         <h1>♦Runecard Sorcerers♦</h1>
         <nav>
-            <div>
-                <a class="volta" href="index.html"> ↩</a>
-            </div>
-
+            <a class="volta" href="index.html"><div>↩</div></a> 
         </nav>
     </main>
     <script></script>
