--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body class="masmorra">
     <main id="index">
         <h1>♦Runecard Sorcerers♦</h1>
         <nav id="menu">
-            <a href="jogar.html" id="jogar"><div>Jogar</div></a> 
-            <a href="deck.html" id="deck"><div>Deck</div></a>
-            <a href="shop.html" id="shop"><div>Shop</div></a>
-            <a href="sobre-nos.html" id="sobre"><div> Sobre⠀Nós</div></a>
+            <a href="jogar.html" id="jogar"><div class="botao">Jogar</div></a> 
+            <a href="deck.html" id="deck"><div class="botao">Deck</div></a>
+            <a href="shop.html" id="shop"><div class="botao">Shop</div></a>
+            <a href="sobre-nos.html" id="sobre" ><div class="botao"> Sobre⠀Nós</div></a>
         </nav>
     </main>
     <script></script>
