--- a/jogar.html
+++ b/jogar.html
@@ -12,13 +12,20 @@
         rel="stylesheet">
 </head>
 
-<body>
-    <main id="index">
-        <h1>♦Runecard Sorcerers♦</h1>
-        <nav>
-            <a class="volta" href="index.html"><div>↩</div></a> 
+<body class="masmorra">
+    <main id="jogar">
+        <a class="volta" href="index.html"><div class="botao">↩</div></a> 
+        <nav id="batalhas">
+            <h1 class="titulo">Selecione seu oponente</h1>
+            <div>
+            <a href="batalha.html" id="jogar"><div class="botao" id="oponente01"><p>Insira aqui o nome do oponente</p></div></a>
+             <!--escrever derrotado quando ja derrotado-->
+             <a href="batalha.html" id="jogar"><div class="botao" id="oponente02"><p>Insira aqui o nome do oponente</p></div></a>
+             <a href="batalha.html" id="jogar"><div class="botao" id="oponente03"><p>Insira aqui o nome do oponente</p></div></a>
+            </div>
         </nav>
     </main>
+    
     <script></script>
 </body>
 
