--- a/shop.html
+++ b/shop.html
@@ -12,11 +12,10 @@
         rel="stylesheet">
 </head>
 
-<body>
-    <main id="index">
-        <h1>♦Runecard Sorcerers♦</h1>
+<body class="masmorra">
+    <main id="shop">
         <nav>
-            <a class="volta" href="index.html"><div>↩</div></a> 
+            <a class="volta" href="index.html"><div class="botao">↩</div></a> 
         </nav>
     </main>
     <script></script>
