--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -12,11 +12,11 @@
         rel="stylesheet">
 </head>
 
-<body>
-    <main id="index">
-        <h1>♦Runecard Sorcerers♦</h1>
+<body class="masmorra">
+    <main id="sobre-nos">
         <nav>
-            <a class="volta" href="index.html"><div>↩</div></a> 
+            <h1>♦Runecard Sorcerers♦</h1>
+            <a class="volta" href="index.html"><div class="botao">↩</div></a>
         </nav>
     </main>
     <script></script>
