--- a/batalha.html
+++ b/batalha.html
@@ -14,7 +14,9 @@
 
 <body class="batalha">
     <main id="arena">
-        <div id="baralho-area"></div>
+        <div id="baralho-area">
+            <img src="img/carta-base.png" id="base">
+        </div>
     </main>
     <script src="batalha.js"></script>
 </body>
