--- a/batalha.html
+++ b/batalha.html
@@ -14,6 +14,9 @@
 
 <body class="batalha">
     <main id="arena">
+        <div>
+            
+        </div>
         <div id="baralho-area">
             <img src="img/carta-base.png" id="base">
         </div>
