--- a/deck.html
+++ b/deck.html
@@ -12,11 +12,48 @@
         rel="stylesheet">
 </head>
 
-<body class="masmorra">
+<body class="background-deck">
     <main id="deck">
         <nav>
-          <a class="volta" href="index.html"><div class="botao">↩</div></a> 
+            <a href="index.html"><div class="volta" id="voltar-deck">↩</div></a> 
         </nav>
+        <h1 class="titulo">Seu baralho atual</h1>
+        <div id="baralho-formado">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+        </div>
+        <h2 class="titulo">Escolha suas cartas</h2>
+        <section id="colecao">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+        </section>
     </main>
     <script></script>
 </body>
