--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <main id="index">
         <h1>♦Runecard Sorcerers♦</h1>
         <nav id="menu">
-            <a href="jogar.html" id="jogar"><div class="botao">Jogar</div></a> 
-            <a href="deck.html" id="deck"><div class="botao">Deck</div></a>
-            <a href="shop.html" id="shop"><div class="botao">Shop</div></a>
-            <a href="sobre-nos.html" id="sobre" ><div class="botao"> Sobre⠀Nós</div></a>
+            <a id="jogar" href="jogar.html"><div class="botao">Jogar</div></a> 
+            <a id="deck" href="deck.html"><div class="botao">Deck</div></a>
+            <a id="shop" href="shop.html"><div class="botao">Shop</div></a>
+            <a id="sobre" href="sobre-nos.html"><div class="botao">Sobre Nós</div></a>
         </nav>
     </main>
     <script></script>
