--- a/jogar.html
+++ b/jogar.html
@@ -12,21 +12,26 @@
         rel="stylesheet">
 </head>
 
-<body class="masmorra">
-    <main id="jogar">
-        <a class="volta" href="index.html"><div class="botao">↩</div></a> 
+<body class="sala-masmorra">
+    <main>
+        <a href="index.html">
+            <div class="volta">↩</div>
+        </a>
+        <h1 class="titulo">Selecione seu oponente</h1>
         <nav id="batalhas">
-            <h1 class="titulo">Selecione seu oponente</h1>
-            <div>
-            <a href="batalha.html" id="jogar"><div class="botao" id="oponente01"><p>Insira aqui o nome do oponente</p></div></a>
-             <!--escrever derrotado quando ja derrotado-->
-             <a href="batalha.html" id="jogar"><div class="botao" id="oponente02"><p>Insira aqui o nome do oponente</p></div></a>
-             <a href="batalha.html" id="jogar"><div class="botao" id="oponente03"><p>Insira aqui o nome do oponente</p></div></a>
+            <div id="selecionador">
+                <!--escrever derrotado quando ja derrotado-->
+                <a href="batalha.html"><img src="img/carta-base.png" id="oponente">
+                <p id="nome-oponente">Insira aqui o nome do oponente</p>
+                </a>
+                <button id="anterior" class="controle">⇦</button>
+                <button id="proximo" class="controle">⇨</button>
             </div>
         </nav>
+
     </main>
-    
-    <script></script>
+
+    <script src="batalha.js"></script>
 </body>
 
 </html>
