--- a/shop.html
+++ b/shop.html
@@ -15,7 +15,7 @@
 <body class="masmorra">
     <main id="shop">
         <nav>
-            <a class="volta" href="index.html"><div class="botao">↩</div></a> 
+            <a href="index.html"><div class="volta">↩</div></a> 
         </nav>
     </main>
     <script></script>
