--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -16,7 +16,7 @@
     <main id="sobre-nos">
         <nav>
             <h1>♦Runecard Sorcerers♦</h1>
-            <a class="volta" href="index.html"><div class="botao">↩</div></a>
+            <a href="index.html"><div class="volta">↩</div></a> 
         </nav>
     </main>
     <script></script>
