--- a/batalha.html
+++ b/batalha.html
@@ -14,12 +14,42 @@
 
 <body class="batalha">
     <main id="arena">
-        <div>
-            
+        <div id="oponente-obj">
+            <!-- <img src="img/Runa-Logo.png"> -->
+            <div class="hp">❤️20</div>
         </div>
-        <div id="baralho-area">
-            <img src="img/carta-base.png" id="base">
-        </div>
+            <div id="slot1">
+                <img src="img/carta.png">
+                <p class="dmg">🗡️1</p>
+                <p class="hp">❤️5</p>
+            </div>
+            <div id="slot2">
+                <img src="img/carta.png">
+                <p class="dmg">🗡️1</p>
+                <p class="hp">❤️5</p>
+            </div>
+            <div id="slot3">
+                <img src="img/carta.png">
+                <p class="dmg">🗡️1</p>
+                <p class="hp">❤️5</p>
+            </div>
+            <div id="slot4">
+                <img src="img/carta.png">
+                <p class="dmg">🗡️1</p>
+                <p class="hp">❤️5</p>
+            </div>
+            <div id="slot5">
+                <img src="img/carta.png">
+                <p class="dmg">🗡️1</p>
+                <p class="hp">❤️5</p>
+            </div>
+            <div id="slot6">
+                <img src="img/carta.png">
+                <p class="dmg">🗡️1</p>
+                <p class="hp">❤️5</p>
+            </div>
+        <div id="player-deck"></div>
+        <img src="img/carta-base.png" id="baralho-area">
     </main>
     <script src="batalha.js"></script>
 </body>
