--- a/jogar.html
+++ b/jogar.html
@@ -18,17 +18,12 @@
             <div class="volta">↩</div>
         </a>
         <h1 class="titulo">Selecione seu oponente</h1>
-        <nav id="batalhas">
-            <div id="selecionador">
-                <!--escrever derrotado quando ja derrotado-->
-                <a href="batalha.html"><img src="img/carta-base.png" id="oponente">
-                <p id="nome-oponente">Insira aqui o nome do oponente</p>
-                </a>
-                <button id="anterior" class="controle">⇦</button>
-                <button id="proximo" class="controle">⇨</button>
-            </div>
-        </nav>
-
+        <div id="selecionador">
+            <a href="batalha.html"><img src="img/carta-base.png" id="oponente"  id="botao-oponente"></a>
+            <p id="nome-oponente">Insira aqui o nome do oponente</p>
+            <button id="anterior" class="controle">⇦</button>
+            <button id="proximo" class="controle">⇨</button>
+        </div>
     </main>
 
     <script src="batalha.js"></script>
