--- a/deck.html
+++ b/deck.html
@@ -19,43 +19,14 @@
         </nav>
         <h1 class="titulo">Seu baralho atual</h1>
         <div id="baralho-formado">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+            
         </div>
         <h2 class="titulo">Escolha suas cartas</h2>
         <section id="colecao">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
-            <img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png"><img src="img/carta-bloqueada.png">
+
         </section>
     </main>
-    <script></script>
+    <script src="batalha.js"></script>
 </body>
 
 </html>
