--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -19,7 +19,7 @@
             <a href="index.html"><div class="volta">↩</div></a> 
         </nav>
     </main>
-    <script></script>
+    <script src="batalha.js"></script>
 </body>
 
 </html>
