--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -12,13 +12,22 @@
         rel="stylesheet">
 </head>
 
-<body class="masmorra">
+<body id="background-sobre-nos">
     <main id="sobre-nos">
         <nav>
-            <h1>♦Runecard Sorcerers♦</h1>
             <a href="index.html"><div class="volta">↩</div></a> 
         </nav>
-    </main>
+
+        <h1>Agradecimentos especiais à:</h1>
+        <p>Bruno Ferreira da Silva 
+            <br>-ssas
+        </p>
+        <p>Arthur Rodrigues Nepomucenos Milagres
+            <br>-
+        </p>
+        <p>Daniel Ferraz 
+            <br>
+        </p>
     <script src="batalha.js"></script>
 </body>
 
