--- a/shop.html
+++ b/shop.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 </head>
 
-<body class="masmorra">
+<body id="shop-background">
     <main id="shop">
         <nav>
             <a href="index.html"><div class="volta">↩</div></a> 
