--- a/batalha.html
+++ b/batalha.html
@@ -15,7 +15,7 @@
 <body class="batalha">
     <main id="arena">
         <div class="hp" id="vida-inimigo">❤️20</div>
-        <div id="oponente-obj"></div>
+        <img id="oponente-obj"></img>
         <div id="slot1">
             <img src="img/carta.png">
             <p class="dmg">🗡️1</p>
@@ -51,7 +51,7 @@
                 <div class="volta">↩</div>
             </a>
         </nav>
-        <div id="passa-turno">⏫</div>
+        <div id="passa-turno"></div>
         <div class="hp" id="vida-player">❤️20</div>
         <div id="player-deck"></div>
         <img src="img/carta-base.png" id="baralho-area">
