--- a/jogar.html
+++ b/jogar.html
@@ -19,14 +19,15 @@
         </a>
         <h1 class="titulo">Selecione seu oponente</h1>
         <div id="selecionador">
-            <a href="batalha.html"><img src="img/carta-base.png" id="oponente"  id="botao-oponente"></a>
+            <a href="batalha.html" id="link-oponente" >
+                <img id="img-oponente"></img>
+            </a>
             <p id="nome-oponente">Insira aqui o nome do oponente</p>
             <button id="anterior" class="controle">⇦</button>
             <button id="proximo" class="controle">⇨</button>
         </div>
     </main>
-
-    <script src="batalha.js"></script>
+    <script src="jogar.js"></script>
 </body>
 
 </html>
