--- a/referencias.html
+++ b/referencias.html
@@ -1,2 +1,16 @@
-<p><a href="https://br.freepik.com/vetores-gratis/silueta-de-arvore-pinho-paisagem-contra-um-moonlit-ceu_2533760.htm#query=night%20florest&position=9&from_view=search&track=sph">Imagem de kjpargeter</a> no Freepik</p>
-<p>https://1.bp.blogspot.com/-rVDB5KiLNgY/UqjOI74s7pI/AAAAAAAAGoA/ba0rwPGRe28/s1600/dungeon+(1).jpg</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Referências</title>
+</head>
+<body class="referencias">
+    <p> <a href="https://br.freepik.com/vetores-gratis/silueta-de-arvore-pinho-paisagem-contra-um-moonlit-ceu_2533760.htm#query=night%20florest&position=9&from_view=search&track=sph">Imagem de kjpargeter</a> no Freepik</p>
+    <p> <a href="https://1.bp.blogspot.com/-rVDB5KiLNgY/UqjOI74s7pI/AAAAAAAAGoA/ba0rwPGRe28/s1600/dungeon+(1).jpg"></a></p>
+    <p> <a href="https://www.wallpaperflare.com/brown-wooden-framed-glass-top-table-fantasy-art-pointed-ears-wallpaper-tmspd"></a></p>
+    <p> <a href="https://www.wallpaperflare.com/candle-fantasy-art-book-coins-tavern-based-bard-wallpaper-tnvlf"></a></p>
+    <p>     <a href="https://www.wallpaperflare.com/sheep-heads-card-game-bavaria-bavarian-table-schafkopf-card-wallpaper-ulkhp"></a></p>
+</body>
+</html>
