--- a/jogar.html
+++ b/jogar.html
@@ -13,19 +13,17 @@
 </head>
 
 <body class="sala-masmorra">
-    <main>
-        <a href="index.html">
+    <main id="selecionador">
+        <a href="index.html" id="botao-voltar">
             <div class="volta">↩</div>
         </a>
         <h1 class="titulo">Selecione seu oponente</h1>
-        <div id="selecionador">
-            <a href="batalha.html" id="link-oponente" >
-                <img id="img-oponente"></img>
-            </a>
-            <p id="nome-oponente">Insira aqui o nome do oponente</p>
-            <button id="anterior" class="controle">⇦</button>
-            <button id="proximo" class="controle">⇨</button>
-        </div>
+        <a href="batalha.html" id="link-oponente">
+            <img id="img-oponente"></img>
+        </a>
+        <p id="nome-oponente">Insira aqui o nome do oponente</p>
+        <button id="anterior" class="controle">⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀</button>
+        <button id="proximo" class="controle">⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀</button>
     </main>
     <script src="jogar.js"></script>
 </body>
