--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -22,7 +22,7 @@
         <p>Bruno Ferreira da Silva 
             <br>-ssas
         </p>
-        <p>Arthur Rodrigues Nepomucenos Milagres
+        <p>Arthur Rodrigues Nepomuceno Milagres
             <br>-
         </p>
         <p>Daniel Ferraz 
