--- a/deck.html
+++ b/deck.html
@@ -26,7 +26,7 @@
 
         </section>
     </main>
-    <script src="batalha.js"></script>
+    <script src="deck.js"></script>
 </body>
 
 </html>
