--- a/deck.html
+++ b/deck.html
@@ -21,6 +21,12 @@
         <div id="baralho-formado">
             
         </div>
+        <div class="alerta-len">
+            <p>Deck incompleto!<br>Números de cartas insuficiente<br>Caso você saia da página, seu deck não será salvo e seu último deck completo ficará no lugar</p>
+        </div>
+        <div class="alerta-max">
+            <p>Deck completo!<br>Números máximo de cartas atingido<br>Remova uma carta antes de adicionar uma nova ao deck</p>
+        </div>
         <h2 class="titulo">Escolha suas cartas</h2>
         <section id="colecao">
 
