--- a/batalha.html
+++ b/batalha.html
@@ -48,10 +48,10 @@
         </div>
         <nav id="batalha-voltar">
             <a href="jogar.html">
-                <div class="volta">↩</div>
+                <div class="volta">r</div>
             </a>
         </nav>
-        <div id="passa-turno"></div>
+        <img src="img/espada.png" id="passa-turno"></img>
         <div class="hp" id="vida-player">❤️20</div>
         <div id="player-deck"></div>
         <img src="img/carta-base.png" id="baralho-area">
