--- a/referencias.html
+++ b/referencias.html
@@ -11,5 +11,7 @@
     <p> <a href="https://www.wallpaperflare.com/brown-wooden-framed-glass-top-table-fantasy-art-pointed-ears-wallpaper-tmspd"></a></p>
     <p> <a href="https://www.wallpaperflare.com/candle-fantasy-art-book-coins-tavern-based-bard-wallpaper-tnvlf"></a></p>
     <p>     <a href="https://www.wallpaperflare.com/sheep-heads-card-game-bavaria-bavarian-table-schafkopf-card-wallpaper-ulkhp"></a></p>
+    <a><a href="https://www.flaticon.com/br/icones-gratis/espada" title="espada ícones">Espada ícones criados por Ken111 - Flaticon</a></a>
+    <a href="https://www.flaticon.com/br/icones-gratis/escudo" title="escudo ícones">Escudo ícones criados por Freepik - Flaticon</a>
 </body>
 </html>
