--- a/batalha.html
+++ b/batalha.html
@@ -14,7 +14,10 @@
 
 <body class="batalha">
     <main id="arena">
-        <div class="hp" id="vida-inimigo">❤️20</div>
+        <img class="aro" id="aro1" src="img/aro.png"></img>
+        <img class="aro" id="aro2" src="img/aro.png"></img>
+        <img class="aro" id="aro3" src="img/aro.png"></img>
+        <div class="hp" id="vida-inimigo">❤️1⠀</div> <!-- caractere invisivel:⠀-->
         <img id="oponente-obj"></img>
         <div id="slot1">
             <img src="img/carta.png">
@@ -52,7 +55,8 @@
             </a>
         </nav>
         <img src="img/espada.png" id="passa-turno"></img>
-        <div class="hp" id="vida-player">❤️20</div>
+        <div class="hp" id="vida-player">❤️10</div>
+        <div class="mana" id="mana-player">⭐20</div>
         <div id="player-deck"></div>
         <img src="img/carta-base.png" id="baralho-area">
     </main>
