--- a/batalha.html
+++ b/batalha.html
@@ -17,21 +17,21 @@
         <img class="aro" draggable="false" id="aro1" src="img/aro.png"></img>
         <img class="aro" draggable="false" id="aro2" src="img/aro.png"></img>
         <img class="aro" draggable="false" id="aro3" src="img/aro.png"></img>
-        <div class="hp" draggable="false" id="vida-inimigo">❤️1⠀</div> <!-- caractere invisivel:⠀-->
+        <div class="hp" draggable="false" id="vida-inimigo">❤️20</div> <!-- caractere invisivel:⠀-->
         <img id="oponente-obj" draggable="false"></img>
         <div id="area-inimigo">
             <div id="slot1">
-                <img src="img/carta.png">
+                <img>
                 <p class="dmg"></p>
                 <p class="hp"></p>
             </div>
             <div id="slot2">
-                <img src="img/carta.png">
+                <img>
                 <p class="dmg"></p>
                 <p class="hp"></p>
             </div>
             <div id="slot3">
-                <img src="img/carta.png">
+                <img>
                 <p class="dmg"></p>
                 <p class="hp"></p>
             </div>
@@ -60,7 +60,7 @@
             </a>
         </nav>
         <img draggable="false" src="img/espada.png" id="passa-turno"></img>
-        <div id="vida-player">❤️10</div>
+        <div id="vida-player">❤️20</div>
         <div class="mana" id="mana-player">⭐0⠀</div>
         <div id="player-deck"></div>
         <img draggable="false" id="baralho-area">
