--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
             <a id="sobre" href="sobre-nos.html"><div class="botao">Sobre Nós</div></a>
         </nav>
     </main>
-    <script></script>
+    <script src="deck.js"></script>
 </body>
 </html>
