--- a/jogar.html
+++ b/jogar.html
@@ -17,7 +17,7 @@
         <a href="index.html" id="botao-voltar">
             <div class="volta">↩</div>
         </a>
-        <h1 class="titulo">Selecione seu oponente</h1>
+        <h1 class="texto">Selecione seu oponente</h1>
         <a href="batalha.html" id="link-oponente">
             <img id="img-oponente"></img>
         </a>
