--- a/referencias.html
+++ b/referencias.html
@@ -13,5 +13,6 @@
     <a href="https://www.wallpaperflare.com/sheep-heads-card-game-bavaria-bavarian-table-schafkopf-card-wallpaper-ulkhp"></a></p>
     <a href="https://www.flaticon.com/br/icones-gratis/espada" title="espada ícones">Espada ícones criados por Ken111 - Flaticon</a>
     <a href="https://www.flaticon.com/br/icones-gratis/escudo" title="escudo ícones">Escudo ícones criados por Freepik - Flaticon</a>
+    <a href="https://game-icons.net/">MELHOR SITE DE TODOS SALVA VIDAS TE AMO (Lorc, Delapouite & contributors)</a>
 </body>
 </html>
