--- a/batalha.html
+++ b/batalha.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <link rel="icon" href="img/Runa-Logo.png">
     <title>Runecard Sorcerers</title>
     <link rel="stylesheet" href="styles.css">
