--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
             <a id="deck" href="deck.html"><div class="botao">Deck</div></a>
             <a id="shop" href="shop.html"><div class="botao">Shop</div></a>
             <a id="sobre" href="sobre-nos.html"><div class="botao">Sobre Nós</div></a>
+            <button id="delete-data">🗑️Apagar Dados</button>
+            <button id="save-data">💳Salvar Dados</button>
+            <button id="load-data">📩Carregar Dados</button>
         </nav>
     </main>
     <script src="deck.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
