--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -19,57 +19,21 @@
         </nav>
 
         <h1>Agradecimentos especiais à:</h1>
-        <!-- Abertura da div. -->
-<div style="position:relative; 
-    font-size:60px; 
-    width:300px; 
-    height:60px; 
-    overflow:hidden; 
-    margin:0 auto 0 auto; 
-    border:none">
-    <!-- O conteúdo da div. -->
-    <div 
-        style="float:left;"
-        style="position:absolute; 
-        top:0px; 
-        right:0px; 
-        z-index:99; 
-        background-color:transparent; 
-        width:40px; 
-        height:60px;" 
-        onmouseover="MouseoverMessageInAlertBox1()">
-        1
-    </div>
-    <div 
-        style="float:right;">3
-    </div>
-    <div 
-        style="text-align: center;"
-        style="position:absolute; 
-        top:0px; 
-        right:0px; 
-        z-index:99; 
-        background-color:transparent; 
-        width:40px; 
-        height:60px;" 
-        onmouseover="MouseoverMessageInAlertBox2()">
-        2
-    </div>
-    <div style="clear:both;"></div>
-    <!-- O div com easter egg. -->
-    <div 
-        style="position:absolute; 
-        top:0px; 
-        right:0px; 
-        z-index:99; 
-        background-color:transparent; 
-        width:40px; 
-        height:60px;" 
-        onmouseover="MouseoverMessageInAlertBox3()">
-    </div>
-</div>
-<!-- Fim da Div. -->
- 
+            <h2 class="numeracao">1</h2>
+                <p class="paragraph-sobre-nos">The standard Lorem Ipsum passage, used since the 1500s
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                </p>
+            
+            <h2 class="numeracao">2</h2>
+                <p>The standard Lorem Ipsum passage, used since the 1500s
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                </p>    
+            <h2 onmouseover="MouseoverMessageInAlertBox1()" class="numeracao">3</h2>
+                <p>The standard Lorem Ipsum passage, used since the 1500s
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                </p>
+
+    </main>            
     <script src="easterEgg.js"></script>
 </body>
 
