--- a/deck.html
+++ b/deck.html
@@ -32,6 +32,7 @@
 
         </section>
     </main>
+    <script src="//cdn.rawgit.com/namuol/cheet.js/master/cheet.min.js" type="text/javascript"></script>
     <script src="deck.js"></script>
 </body>
 
