--- a/batalha.html
+++ b/batalha.html
@@ -67,7 +67,10 @@
         <img draggable="false" id="baralho-area">
         <p id="turno-contador">Turno:<br>1</p>
         <p id="baralho-texto">Próximo:<br>.</p>
+        <p id="falas"></p>
+        <p id="info-card" class="hide"></p>
     </main>
+    <script src="//cdn.rawgit.com/namuol/cheet.js/master/cheet.min.js" type="text/javascript"></script>
     <script src="batalha.js"></script>
 </body>
 
