--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -19,16 +19,15 @@
         </nav>
 
         <h1>Agradecimentos especiais à:</h1>
-            <h2 class="numeracao">1</h2>
-                <p class="paragraph-sobre-nos">The standard Lorem Ipsum passage, used since the 1500s
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+            <h2 class="numeracao">Arthur Rodrigues Nepomucenos Milagres(o mais gay :))</h2>
+                <p> Ele tem 16 anos, atualmente mora em BH, e cursa Informática no Cefet-Mg, gosta de jogar Overwatch e LOL(o jogo mais odiado da internet), é o principal na criação desse site, desde a criação do sistema do jogo, design das cartas e do campo de batalha, coordenando as instruções e auxiliando seus companheiros.
                 </p>
             
-            <h2 class="numeracao">2</h2>
-                <p>The standard Lorem Ipsum passage, used since the 1500s
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            <h2 class="numeracao">Bruno Ferreira da Silva</h2>
+                <p> Ele tem 17 anos, mora em BH, cursa informática no Cefet-Mg, gosta de ler mangas/manhwas, ver animes e jogar variados jogos, foi o responsável em manter a sanidade mental de Arthur em dia perante as diversas dificuldades. Deixando as brincadeiras de lado, foi o responsável na busca dos backgrounds, linkamentos e e volta entre as páginas/jogo do site.
+
+                </p>
                 </p>    
-            <h2 onmouseover="MouseoverMessageInAlertBox1()" class="numeracao">3</h2>
                 <p>The standard Lorem Ipsum passage, used since the 1500s
                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
                 </p>
