--- a/shop.html
+++ b/shop.html
@@ -13,12 +13,21 @@
 </head>
 
 <body id="shop-background">
-    <main id="shop">
-        <nav>
+    <main id="loja">
+        <nav class="voltar">
             <a href="index.html"><div class="volta">↩</div></a> 
         </nav>
+        <h1 class="titulo">Loja</h1> 
+        <div id="dinheiro">
+            <p id="gemas-player">💎0</p>
+        </div>
+        <section id="loja-cartas">
+            <div class="carta-venda"></div>
+            <div class="carta-venda"></div>
+            <div class="carta-venda"></div>
+            <div class="carta-venda"></div>
+        </section>
     </main>
-    <script src="batalha.js"></script>
 </body>
 
 </html>
