--- a/deck.html
+++ b/deck.html
@@ -14,10 +14,10 @@
 
 <body class="background-deck">
     <main id="deck">
-        <nav>
+        <nav class="voltar">
             <a href="index.html"><div class="volta" id="voltar-deck">↩</div></a> 
         </nav>
-        <h1 class="titulo">Seu baralho atual</h1>
+        <h1 class="titulo" id="cartas-desbloqueadas">Seu baralho atual</h1>
         <div id="baralho-formado">
             
         </div>
