--- a/jogar.html
+++ b/jogar.html
@@ -14,9 +14,9 @@
 
 <body class="sala-masmorra">
     <main id="selecionador">
-        <a href="index.html" id="botao-voltar">
-            <div class="volta">↩</div>
-        </a>
+        <nav class="voltar">
+            <a href="index.html"><div class="volta">↩</div></a> 
+        </nav>
         <h1 class="texto">Selecione seu oponente</h1>
         <a href="batalha.html" id="link-oponente">
             <img id="img-oponente"></img>
