--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="img/Runa-Logo.png">
-    <title>Runecard Sorcerers</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
-        rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Cadastro</title>
 </head>
-
-<body class="masmorra">
-    <main id="index">
-        <h1>♦Runecard Sorcerers♦</h1>
-        <nav id="menu">
-            <a id="jogar" href="jogar.html"><div class="botao">Jogar</div></a> 
-            <a id="deck" href="deck.html"><div class="botao">Deck</div></a>
-            <a id="shop" href="shop.html"><div class="botao">Shop</div></a>
-            <a id="sobre" href="sobre-nos.html"><div class="botao">Sobre Nós</div></a>
-            <button id="delete-data">🗑️Apagar Dados</button>
-            <button id="save-data">💳Salvar Dados</button>
-            <button id="load-data">📩Carregar Dados</button>
-        </nav>
-    </main>
-    <script src="deck.js"></script>
-    <script src="index.js"></script>
+<body>
+    <div class="slider-thumb">
+        <section class="login">
+            <h1>Area de cadastro</h1>
+            <input type="text" placeholder="Login" id="usernameinput">
+            <br><br>
+            <input type="password" placeholder="Senha" id="passwordinput">
+            <br><br>
+            <button onclick="cadastrar()">Cadastrar</button>
+        </section>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
