--- a/telalogin.html
+++ b/telalogin.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Cadastro</title>
+    <title>Login</title>
 </head>
 <body>
     <div class="slider-thumb">
         <section class="login">
-            <h1>Area de cadastro</h1>
+            <h1>Area de Login</h1>
             <input type="text" placeholder="Login" id="usernameinput">
             <br><br>
             <input type="password" placeholder="Senha" id="passwordinput">
             <br><br>
-            <button onclick="cadastrar()">Cadastrar</button>
+            <button onclick="login()">Entrar</button>
+            <p id="status"></p>
         </section>
     </div>
     <script src="script.js"></script>
