--- a/deck.html
+++ b/deck.html
@@ -15,7 +15,7 @@
 <body class="background-deck">
     <main id="deck">
         <nav class="voltar">
-            <a href="index.html"><div class="volta" id="voltar-deck">↩</div></a> 
+            <a href="lobby.html"><div class="volta" id="voltar-deck">↩</div></a> 
         </nav>
         <h1 class="titulo" id="cartas-desbloqueadas">Seu baralho atual</h1>
         <div id="baralho-formado">
