--- a/shop.html
+++ b/shop.html
@@ -15,7 +15,7 @@
 <body class="taverna">
     <main id="comprar">
         <nav class="voltar">
-            <a href="index.html">
+            <a href="lobby.html">
                 <div class="volta">↩</div>
             </a>
         </nav>
@@ -29,22 +29,22 @@
         <section id="loja-cartas">
             <div class="carta-venda" id="comprar-um">
                 <img src="" draggable="false">
-                <button class="botao-comprar">Comprar💰</button>
+                <button class="botao-comprar">Comprar💰-25💎</button>
                 <button class="botao-trancar">Congelar🧊</button>
             </div>
             <div class="carta-venda" id="comprar-dois">
                 <img src="" draggable="false">
-                <button class="botao-comprar">Comprar💰</button>
+                <button class="botao-comprar">Comprar💰-25💎</button>
                 <button class="botao-trancar">Congelar🧊</button>
             </div>
             <div class="carta-venda" id="comprar-tres">
                 <img src="" draggable="false">
-                <button class="botao-comprar">Comprar💰</button>
+                <button class="botao-comprar">Comprar💰-25💎</button>
                 <button class="botao-trancar">Congelar🧊</button>
             </div>
             <div class="carta-venda" id="comprar-quatro">
                 <img src="" draggable="false">
-                <button class="botao-comprar">Comprar💰</button>
+                <button class="botao-comprar">Comprar💰-25💎</button>
                 <button class="botao-trancar">Congelar🧊</button>
             </div>
         </section>
